[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metko"
version = "0.1.0"
authors = [
  { name="Egor Panfilov", email="egor.v.panfilov@gmail.com" },
]
description = "Toolkit for comparison of methods and measurements"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
#dependencies = [
#    "numpy",
#    "scipy",
#    "scikit-learn",
#    "matplotlib",
#    "numba",
#    "pytorch",
#]

[project.urls]
"Homepage" = "https://github.com/soupault/metko"
"Bug Tracker" = "https://github.com/soupault/metko/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["metko*"]
exclude = ["entry*", "tests*"]
namespaces = false
